Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -601,8 +601,8 @@ Having established that the duration of continuous admixture under ideal
 circumstances is only marginally influential on admixture time
 estimates, we want to compare its effect to more realistic simulation scenarios. Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
 Previous studies reported that violations of these assumptions can have an effect on the admixture time estimates.
- Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (Supp. Fig. \ref{fig:figS1}), for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map.
- Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
+Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (Supp. Fig. \ref{fig:figS1}), for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map.
+Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
 positions in the admixed population are considered where both source
 populations are diverged from each other, to an even stricter scheme. The Higher-Enrichment Scheme (HES) requiring additional
 to the LES non-Africans to be polymorphic at a SNP. Additionally, we altered the minimal distance between pairs of SNPs for which the LD is calculated from 0.05 cM to 0.02 cM.
@@ -617,7 +617,7 @@ the bias of admixture estimates (Supplement Table \ref{tab:tableS1}).
 Figure \ref{fig:fig3} shows the comparison of the standardized
 difference between true and estimated time between the previously used
 model (ascertainment = LES, \(d_{0} = 0.05 cM\), demography = simple and
-recombination = constant) further refereed to as the standard model and
+recombination = constant) further referred to as the standard model and
 a model with one of the four parameter changed, respectively. The
 previously observed overestimation of the standard model was estimated
 to be 0.12 (0.08 - 0.16 95 \% CI) standard deviation from the true
@@ -625,9 +625,11 @@ admixture time.
 
 Every parameter change results in lower estimates compared to the
 standard model, with the biggest difference between a constant and a
-varying recombination (-1.76 - -1.7 95 \% CI) and the smallest
-differences between a pulse and continuous gene flow model (-0.34 -
--0.28 95 \% CI). Most accurate estimates are achieved using the LES
+varying recombination (-1.76 - -1.7 95 \% CI). The
+underestimation caused by the continuous gene flow model (-0.34 -
+-0.28 95 \% CI) is in the range of biases arising from the ascertainment scheme (-0.35 -
+-0.29 95 \% CI) and only slightly more then caused by a more complex demography (-0.25 -
+-0.19 95 \% CI). Most accurate estimates are achieved using the LES
 ascertainment scheme in combination with a minimal distance of 0.05 cM.
 Additionally, the bias introduced by the demography seems to depend on
 the used ascertainment scheme, since only under the HES a difference
